--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.0",
+    "morgan": "^1.9.1",
     "npm-check": "^5.9.0",
     "openssl": "^1.1.0",
     "path": "^0.12.7"
