--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.4.0",
+    "mathjs": "^5.4.0",
     "mongoose": "^5.4.0",
     "morgan": "^1.9.1",
     "npm-check": "^5.9.0",
